<resources>
    <string name="app_name">GymDiary</string>
    <string name="required_field">Required field</string>
    <string name="text_icon_exercise">Icon exerciseBean</string>
    <string name="content_description_delete">Delete</string>
    <string name="saved">Saved</string>
    <string name="text_hint_one">1</string>
    <string name="snackbar_text_button_undo">Undo</string>
    <string name="snackbar_text_exercise_removed">Exercise removed</string>
    <string name="text_alert_delete">Are you sure you want to delete</string>
    <string name="text_loading">Loading…</string>
    <string name="of">of</string>
    <string name="week">Week</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="date_format_view">dd MMM</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="day">Day</string>
    <string name="all">All</string>
    <string name="title_alert">Attention!</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="title_alert_delete">Are you sure?</string>
    <string name="text_label_required">(Required)</string>
    <string name="text_label_optional">(Optional)</string>

    <!-- Content description button toolbar pages -->
    <string name="content_description_button_return_back">Return back</string>
    <string name="content_description_button_save">Save form</string>
    <string name="content_description_button_add_workout">Add workout</string>
    <string name="content_description_button_add_generic">Add element</string>
    <string name="content_description_button_clear_generic">Remove duplicates</string>

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="workout_plan">Workouts</string>
    <string name="exercise">Exercises</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="text_max">Max</string>
    <string name="slash">/</string>

    <!-- Affected Muscle -->
    <string name="category_muscle_abs">Abs</string>
    <string name="category_muscle_back">Back</string>
    <string name="category_muscle_biceps">Biceps</string>
    <string name="category_muscle_cardio">Cardio</string>
    <string name="category_muscle_chest">Chest</string>
    <string name="category_muscle_leg">Leg</string>
    <string name="category_muscle_others">Others</string>
    <string name="category_muscle_shoulder">Shoulder</string>
    <string name="category_muscle_triceps">Triceps</string>

    <!-- Category exerciseBean -->
    <string name="category_exercise_weight_reps">Weight &amp; Reps</string>
    <string name="category_exercise_reps">Reps</string>
    <string name="category_exercise_distance">Distance</string>
    <string name="category_exercise_time">Time</string>

    <!-- Name Default Exercises -->
    <string name="name_exercise_crunch">Crunch</string>
    <string name="name_exercise_cable_crunch">Cable crunch</string>
    <string name="name_exercise_planck">Plank</string>
    <string name="name_exercise_lat_machine">Lat machine</string>
    <string name="name_exercise_pulley">Pulley</string>
    <string name="name_exercise_barbell_row">Barbell row</string>
    <string name="name_exercise_pull_up">Pull up</string>
    <string name="name_exercise_barbell_curl">Barbell curl</string>
    <string name="name_exercise_dumbbell_curl">Dumbbell curl</string>
    <string name="name_exercise_dumbbell_hammer_curl">Dumbbell hammer curl</string>
    <string name="name_exercise_walkin">Walking</string>
    <string name="name_exercise_elliptical_training">Elliptical training</string>
    <string name="name_exercise_cyclette">Cyclette</string>
    <string name="name_exercise_bench_press_flat">Flat bench press</string>
    <string name="name_exercise_bench_press_flat_dumbbell">Flat dumbbell bench press</string>
    <string name="name_exercise_bench_press_incline">Incline barbell bench press</string>
    <string name="name_exercise_bench_press_incline_dumbbell">Incline dumbbell bench press</string>
    <string name="name_exercise_machine_chest_press">Machine chest press</string>
    <string name="name_exercise_squat">Squat</string>
    <string name="name_exercise_leg_ext_machine">Leg extension</string>
    <string name="name_exercise_leg_press">Leg press</string>
    <string name="name_exercise_deadlift">Deadlift</string>
    <string name="name_exercise_leg_curl">Leg curl</string>
    <string name="name_exercise_leg_curl_seated">Leg curl seated</string>
    <string name="name_exercise_seated_calf_raise_machine">Seated calf raise machine</string>
    <string name="name_exercise_military_press">Military press</string>
    <string name="name_exercise_arnold_dumbbell_press">Arnold dumbbell press</string>
    <string name="name_exercise_face_pull">Face pull</string>
    <string name="name_exercise_lateral_dumbbell_raise">Lateral dumbbell raise</string>
    <string name="name_exercise_kick_back">Kick back</string>
    <string name="name_exercise_dips">Dips</string>
    <string name="name_exercise_v_bar_push_down">V-Bar push down</string>
    <string name="name_exercise_rope_push_down">Rope push down</string>

    <!-- Home Fragment -->
    <string name="title_page_home_fragment_one">Hi</string>
    <string name="title_page_home_fragment_two">Secco</string>
    <string name="sub_title_page_home_fragment">Let\'s start workout</string>
    <string name="title_home_frag_container_session_empty">Workout plans</string>
    <string name="sub_title_home_frag_container_session_empty">Create unlimited workout plans as per your need.</string>
    <string name="sub_title_home_frag_container_session_empty_one">Tap to create one now.</string>
    <string name="text_button_home_frag_container_session_empty">Create workout plan</string>
    <string name="title_home_frag_container_session">Workout plan</string>

    <!-- New Edit Workout Plan -->
    <string name="title_page_new_edit_workout_plan">Create workout plan</string>
    <string name="title_page_new_edit_workout_plan_edit">Edit workout plan</string>
    <string name="sub_title_page_new_edit_workout_plan">You can create your own workout plan</string>
    <string name="sub_title_page_new_edit_workout_plan_edit">You can edit your own workout plan</string>
    <string name="edit_text_name_workout_plan">Name</string>
    <string name="edit_text_date_start_workout_plan">Duration</string>
    <string name="edit_text_note_workout_plan">Note</string>
    <string name="label_edit_text_name_workout_plan">Give your workout plan a name</string>
    <string name="label_edit_text_start_date_workout_plan">Duration</string>
    <string name="label_edit_text_note_workout_plan">Add your workout plan a notes</string>
    <string name="choose_start_end_date">Choose start/end date</string>
    <string name="text_button_add_session_workout_plan">Add workout</string>
    <string name="edit_text_name_session_workout_plan">Name workout</string>
    <string name="text_button_add_exercise_workout_plan">Add exercise</string>
    <string name="text_button_save_workout_plan_workout_plan">Save workout plan</string>

    <!-- Detail Workout Plan -->
    <string name="title_page_details_workout_plan">Workout plan</string>
    <string name="text_sessions_is_empty_details_workout_plan">Press + to add a workout to your workout plan</string>
    <string name="text_title_sessions_list_details_workout_plan">Workouts</string>

    <!-- Workout Plan Fragment -->
    <string name="title_page_workout_plan_fragment">All workout plans</string>
    <string name="sub_title_page_workout_plan_fragment">Select workout plan to track</string>
    <string name="title_your_workout_plans_page_workout_plan_fragment">Your workout plans</string>
    <string name="title_your_workout_end_plans_page_workout_plan_fragment">Your finished workout plans</string>
    <string name="text_workout_plan_is_empty">Press + to add a new workout plan</string>

    <!-- Exercise Fragment -->
    <string name="title_page_exercise_fragment">All exercise</string>
    <string name="sub_title_page_exercise_fragment">Select exercise to track</string>
    <string name="text_info_add_exercise_fragment">Did not find what you were looking for? You can create your own exercise by tapping on + button.</string>
    <string name="text_hint_search_view_exercise_fragment">Search all exercises</string>
    <string name="text_delete_exercise">Deleting this exercise will remove all the workout log associated with it</string>

    <!-- NEW EDIT EXERCISE -->
    <string name="title_page_new_edit_exercise">Create exercise</string>
    <string name="title_page_new_edit_exercise_edit">Edit exercise</string>
    <string name="sub_title_page_new_edit_exercise">You can create your own exercise</string>
    <string name="sub_title_page_new_edit_exercise_edit">You can edit your own exercise</string>
    <string name="edit_text_name_exercise">Name exercise</string>
    <string name="edit_text_note_exercise">Note exercise</string>
    <string name="text_affected_muscle">Affected muscles:</string>
    <string name="text_exercise_based">Your exercise is based on:</string>



    <!-- OLD -->

    <string name="add_workout_plan">Let\'s add a workout plan</string>
    <string name="add_exercises">Let\'s add some exercises</string>
    <string name="name_first_workout_plan">My Workout plan 1</string>
    <string name="today">Today</string>


    <string name="add_routine">Add your workoutBean</string>
    <string name="title_add_session">Add workoutBean</string>
    <string name="title_new_routine">New workoutBean</string>
    <string name="name_routine_text">Name workoutBean</string>
    <string name="alert_btn_cancel">Cancel</string>
    <string name="alert_btn_save">Save</string>
    <string name="alert_btn_ok">OK</string>
    <string name="routine_added">Saved workoutBean</string>
    <string name="title_page_new_workout_day">New workoutBean</string>
    <string name="title_page_edit_workout_day">Edit workoutBean</string>
    <string name="title_delete_workout_day">Delete workoutBean</string>
    <string name="title_deleted_workout_day">Deleted workoutBean</string>
    <string name="save">Save</string>
    <string name="notes">Notes</string>

    <string name="content_descr_button_return">Come back</string>
    <string name="new_session">New</string>
    <string name="title_workout_day_saved">Saved workoutBean</string>
    <string name="title_sessions">Workouts</string>
    <string name="add_exercise">Add exerciseBean</string>
    <string name="text_exercise_empty">There are no exercises</string>

    <string name="title_new_exercise">New exerciseBean</string>
    <string name="name_exercise_text">Name exerciseBean</string>
    <string name="title_sets_reps">Sets/Reps:</string>
    <string name="title_series">Sets</string>
    <string name="title_reps">Reps</string>
    <string name="title_add_sets_reps">Add set</string>
    <string name="title_time_rest">Rest time:</string>
    <string name="title_min">Min.</string>
    <string name="title_sec">Sec.</string>
    <string name="title_exercise_saved">Saved exerciseBean</string>
    <string name="title_bottom_sheet_workout_day">Workouts</string>
    <string name="title_exercise_deleted">Deleted exerciseBean</string>

    <string name="title_label">Label</string>
    <string name="title_choose_color">Choose color</string>

    <string name="content_description_radio_button">Selected</string>
    <string name="content_description_options_workout">Options</string>
    <string name="content_description_fab_new_routine">New workoutBean</string>
    <string name="content_description_color_chosen">Chosen</string>
    <string name="content_description_editable">Editable</string>


</resources>