<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_workout_plan"
        android:icon="@drawable/ic_workout_plans"
        android:title="@string/workout_plan"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_exercise"
        android:icon="@drawable/ic_add_menu"
        android:title="@string/exercise"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_menu"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />

</menu>