<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_background"
    android:padding="20dp">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="10dp"
        android:layout_centerInParent="true"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_delete_workout_day"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/textAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:textColor="@color/primary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:text="@string/text_alert_delete"
        android:textStyle="normal"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAlert">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_btn_cancel"
            android:layout_margin="10dp"
            android:textColor="@color/secondary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_btn_ok"
            android:layout_margin="10dp"
            android:textColor="@color/secondary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>