<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_background"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:textSize="21sp"
        android:textColor="@color/primary_text"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        >

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/edit_text_note_workout_plan"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/tertiary_text"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerChooseColor"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="end">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_btn_cancel"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_btn_ok"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>




</LinearLayout>