<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_background"
    android:padding="10dp">
    <LinearLayout
        android:id="@+id/contentHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/titleAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:textColor="@color/primary_text"
            android:text="@string/title_new_routine"
            android:drawablePadding="5dp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/nameRoutine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/contentHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="text"
        android:autofillHints="name"
        tools:ignore="LabelFor"
        android:hint="@string/name_routine_text"
        android:focusable="true"
        android:textCursorDrawable="@drawable/custom_edit_text_cursor"
        android:layout_marginTop="16dp"
        android:textColor="@color/primary_text"
        android:backgroundTint="@color/secondary" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameRoutine"
        android:layout_marginTop="16dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_btn_cancel"
            android:layout_margin="10dp"
            android:textColor="@color/secondary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_btn_save"
            android:layout_margin="10dp"
            android:textColor="@color/secondary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>