<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_background"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputNameWorkoutDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:textColor="@color/primary_text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textTitleChooseColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_choose_color"
        android:textStyle="normal"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <GridView
        android:id="@+id/containerChooseColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:horizontalSpacing="2dp"
        android:numColumns="4"
        android:verticalSpacing="2dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textTitleChooseColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerChooseColor"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_btn_cancel"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_btn_ok"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>