<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameSessionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnOptions">
            <EditText
                android:id="@+id/nameSession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/edit_text_name_session_workout_plan"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/tertiary_text"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOptions"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/content_description_button_save"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:cornerRadius="10dp"
            app:elevation="0dp"
            app:icon="@drawable/ic_more_vert"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/nameSessionLayout"
            app:layout_constraintBottom_toBottomOf="@+id/nameSessionLayout"
            app:layout_constraintStart_toEndOf="@+id/nameSessionLayout"/>
        
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameSessionLayout"
            app:layout_constraintBottom_toTopOf="@+id/btnAddSession" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddSession"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            app:cornerRadius="10dp"
            android:layout_height="wrap_content"
            android:text="@string/text_button_add_exercise_workout_plan"
            android:contentDescription="@string/text_button_add_exercise_workout_plan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>