<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_card"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:padding="4dp">
    <LinearLayout
        android:id="@+id/containerSets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lineSheet1"
        android:gravity="center">
        <TextView
            android:id="@+id/titleSets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_series"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:layout_marginEnd="8dp" />
        <EditText
            android:id="@+id/editTextSets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="4dp"
            android:maxLength="2"
            android:autofillHints="name"
            tools:ignore="LabelFor"
            android:textAlignment="center"
            android:minWidth="48dp"
            android:background="@drawable/custom_edit_text_rounded" />
    </LinearLayout>

    <View
        android:id="@+id/lineSheet1"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@drawable/sheet_line_background"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/containerSets"
        app:layout_constraintBottom_toBottomOf="@+id/containerSets"
        app:layout_constraintStart_toEndOf="@+id/containerSets"
        app:layout_constraintEnd_toStartOf="@+id/containerReps"
        />

    <LinearLayout
        android:id="@+id/containerReps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lineSheet1"
        android:gravity="center">
        <TextView
            android:id="@+id/titleReps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_reps"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:layout_marginEnd="8dp" />
        <EditText
            android:id="@+id/editTextReps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="4dp"
            android:maxLength="2"
            android:autofillHints="name"
            tools:ignore="LabelFor"
            android:textAlignment="center"
            android:background="@drawable/custom_edit_text_rounded"/>
        <TextView
            android:id="@+id/slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:textColor="@color/primary_text"
            android:textSize="22sp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <EditText
            android:id="@+id/editTextReps1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="4dp"
            android:maxLength="2"
            android:autofillHints="name"
            tools:ignore="LabelFor"
            android:textAlignment="center"
            android:background="@drawable/custom_edit_text_rounded" />
    </LinearLayout>

    <View
        android:id="@+id/lineSheet2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@drawable/sheet_line_background"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/btnDelete"
        app:layout_constraintStart_toStartOf="@+id/containerSets"
        app:layout_constraintEnd_toEndOf="@+id/containerReps"
        app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="48dp"
        app:cornerRadius="10dp"
        android:layout_height="48dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:iconTint="@color/error"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_delete"
        app:iconGravity="textStart"
        android:backgroundTint="@color/background"
        app:iconPadding="0dp"
        app:layout_constraintTop_toBottomOf="@+id/containerReps"
        app:layout_constraintStart_toStartOf="@+id/containerSets"
        app:layout_constraintEnd_toEndOf="@+id/containerReps"
        android:contentDescription="@string/content_descr_button_return"
        />



</androidx.constraintlayout.widget.ConstraintLayout>